--- a/index.html
+++ b/index.html
@@ -206,102 +206,32 @@
 
     <div class="row row-cols-1 row-cols-md-4 g-4">
 
-      <!-- Card 1 -->
-      <div class="col">
-        <div class="card h-100 text-center">
-          <div class="card-body">
-            <p class="text-muted small">IQTISODIYOT</p>
-            <p class="text-muted small">JADVAL 6/1</p>
-            <h5 class="card-title fw-bold">Kia Rio <br>(Solaris KRS)</h5>
-            <span class="badge bg-warning text-dark rounded-pill py-2 px-3 mb-2">2025</span>
-            <p class="mb-2">Kuniga 2300 ₽</p>
-            <p class="text-muted small">HAFTASIGA 2900 ₽ DAN</p>
-          </div>
-          <img src="eqm5_black.png" class="card-img-bottom img-fluid" alt="Kia Rio">
-        </div>
-      </div>
-
       <!-- Card 2 -->
       <div class="col">
         <div class="card h-100 text-center">
           <div class="card-body">
-            <p class="text-muted small">IQTISODIYOT</p>
+            <p class="text-muted small">Biznes</p>
             <p class="text-muted small">JADVAL 6/1</p>
-            <h5 class="card-title fw-bold">Hyundai Solaris</h5>
-            <span class="badge bg-warning text-dark rounded-pill py-2 px-3 mb-2">ХИТ</span>
-            <p class="mb-2">Kuniga 1800 ₽</p>
-            <p class="text-muted small">HAFTASIGA 2400 ₽ DAN</p>
+            <h5 class="card-title fw-bold">Hongqi E-QM5</h5>
+            <p class="mb-2">Kuniga 526 000 so'm</p>
           </div>
-          <img src="eqm5_black.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
+          <img src="./eqm5_black.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
         </div>
       </div>
 
       <!-- Card 3 -->
       <div class="col">
-        <div class="card h-100 text-center">
+        <div class="h-100 text-center card">
           <div class="card-body">
-            <p class="text-muted small">QULAYLIK</p>
+            <p class="text-muted small">kamfort +</p>
             <p class="text-muted small">JADVAL 6/1</p>
-            <h5 class="card-title fw-bold">Hyundai Elantra</h5>
-            <p class="mb-2">Kuniga 2600 ₽</p>
-            <p class="text-muted small">HAFTASIGA 2800 ₽ DAN</p>
+            <h5 class="card-title fw-bold">Jac j7</h5>
+            <p class="mb-2">Kuniga 485 000 so'm</p>
           </div>
-          <img src="eqm5_black.png" class="card-img-bottom img-fluid" alt="Hyundai Elantra">
+          <img src="./jac.jpg" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
         </div>
       </div>
 
-      <!-- Card 4 -->
-      <div class="col">
-        <div class="card h-100 text-center">
-          <div class="card-body">
-            <p class="text-muted small">COMFORT PLUS</p>
-            <p class="text-muted small">JADVAL 6/1</p>
-            <h5 class="card-title fw-bold">Hyundai Sonata</h5>
-            <p class="mb-2">Kuniga 3000 ₽</p>
-            <p class="text-muted small">HAFTASIGA 3000 ₽ DAN</p>
-          </div>
-          <img src="eqm5_black.png" class="card-img-bottom img-fluid" alt="Hyundai Sonata">
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-
-<section class="py-5 bg-white">
-  <div class="container">
-    <div class="row row-cols-1 row-cols-md-4 g-4">
-
-      <!-- Moskvich 3 -->
-      <div class="col">
-        <div class="card h-100 text-center">
-          <div class="card-body">
-            <p class="text-muted small">QULAYLIK</p>
-            <p class="text-muted small">JADVAL 6/1</p>
-            <h5 class="card-title fw-bold">Moskvich 3</h5>
-            <p class="mb-2">Kuniga 2600 ₽</p>
-            <p class="text-muted small">BIR HAFTADA 3300 ₽</p>
-          </div>
-          <img src="eqm5_black.png" class="card-img-bottom img-fluid" alt="Moskvich 3">
-        </div>
-      </div>
-
-      <!-- Gili Emgrand 7 -->
-      <div class="col">
-        <div class="card h-100 text-center">
-          <div class="card-body">
-            <p class="text-muted small">QULAYLIK</p>
-            <p class="text-muted small">JADVAL 6/1</p>
-            <h5 class="card-title fw-bold">Gili Emgrand 7</h5>
-            <span class="badge bg-warning text-dark rounded-pill py-2 px-3 mb-2">2024 YIL</span>
-            <p class="mb-2">Kuniga 2600 ₽</p>
-            <p class="text-muted small">HAFTASIGA 3400 ₽ DAN</p>
-          </div>
-          <img src="eqm5_black.png" class="card-img-bottom img-fluid" alt="Gili Emgrand">
-        </div>
-      </div>
-
-      <!-- Jadval 6/1 Blok -->
       <div class="col">
         <div class="h-100">
           <div class="p-4 bg-black text-white h-50 d-flex flex-column justify-content-center">
@@ -322,23 +252,10 @@
         </div>
       </div>
 
-      <!-- Toyota Camry -->
-      <div class="col">
-        <div class="card h-100 text-center">
-          <div class="card-body">
-            <p class="text-muted small">COMFORT PLUS</p>
-            <p class="text-muted small">JADVAL 6/1</p>
-            <h5 class="card-title fw-bold">Toyota Camry</h5>
-            <p class="mb-2">Kuniga 3000 ₽</p>
-            <p class="text-muted small">HAFTASIGA 3500 ₽ DAN</p>
-          </div>
-          <img src="eqm5_black.png" class="card-img-bottom img-fluid" alt="Toyota Camry">
-        </div>
-      </div>
-
     </div>
   </div>
 </section>
+
 
 <!-- BOGLAYMIZ BO‘LIMI -->
 <section class="py-5 bg-light">
