--- a/base.html
+++ b/base.html
@@ -105,7 +105,7 @@
             <ul class="list-unstyled">
              <li><a href="./index.html">Avtomobil ijarasi</a></li>
               <li><a href="./index2.html">Avtomobil sotib olish</a></li>
-              <li><a href="./index3.html">Taxi Rhythm-ga ulanish</a></li>
+              <li><a href="./index3.html">TMT taxi-ga ulanish</a></li>
               <li><a href="./index4.html">Taksi kompaniyalari</a></li>
             </ul>
           </div>
@@ -135,23 +135,23 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card p-3">
-            <h5>Iqtisodiyot</h5>
-            <small>Hyundai Solaris , VW Polo , Kia Rio X</small>
+            <h5>Biznes</h5>
+            <small>Hongqi E-QM5</small>
             <img src="./eqm5_black.png" class="card-img-top mt-2">
           </div>
         </div>
         <div class="col-md-4">
           <div class="card p-3">
-            <h5>Qulaylik</h5>
-            <small>Hyundai Elantra , Haval Jolion , Moskvich 3</small>
-            <img src="./eqm5_black.png" class="card-img-top mt-2">
+            <h5>Elektro</h5>
+            <small>BYD e2</small>
+            <img src="./e2.png" class="card-img-top mt-2">
           </div>
         </div>
         <div class="col-md-4">
           <div class="card p-3">
             <h5>Konfor+</h5>
-            <small>Hyundai Sonata , Toyota Camry , Exeed LX , Jae J7 , Haval F7 , FAW Bestune NAT , Evolute i-PRO</small>
-            <img src="./eqm5_black.png" class="card-img-top mt-2">
+            <small>JAC j7</small>
+            <img src="./jacj7.png" class="card-img-top mt-2">
           </div>
         </div>
       </div>
@@ -163,8 +163,8 @@
       <h2 class="text-white">Biz haqimizda</h2>
       <p>TMT taxi 3 yildan ortiq vaqtdan beri Moskva yo‘lovchi tashish bozorida ishlaydi. Shu vaqt ichida yo‘lovchi va haydovchilarning ishonchi va hurmatiga sazovor bo‘ldik. Buni ko‘plab ijobiy baholar va sharhlar tasdiqlaydi, buning uchun biz barchaga chuqur minnatdormiz.</p>
       <p>Kompaniyamiz korporativ mijozlarga xizmat ko‘rsatishga ixtisoslashgan bo‘lib, ularga xodimlar va boshqaruvchilarni shahar bo‘ylab tez, qulay va xavfsiz tashishga yordam beradi. Bundan tashqari, biz xususiy mijozlarga xizmat ko‘rsatamiz.</p>
-      <p>Taxi Ritm haydovchilarni tanlashda professional va qat’iy yondashuvni kafolatlaydi, bu bizga yo‘lovchilarga tinch va qulay sayohatlarni taqdim etish imkonini beradi. Shu bilan birga, biz haydovchilar bilan insoniy munosabatlarni o‘rnatamiz va qulay mehnat va daromad sharoitlarini yaratamiz, bu bizning hamkorligimizni haqiqatan ham o‘zaro manfaatli qiladi. Kompaniyaning haydovchilari havas qilsa arziydigan izchillik bilan shahar tanlovlarida “Eng yaxshi taksi haydovchisi” unvonini sohibi bo‘lishadi va Moskva shahar ma’muriyatining faxriy yorliqlariga ega bo‘lishadi.</p>
-      <p>Taxi Ritm Moskvadagi eng yirik taksi kompaniyalaridan biri bo‘lib, har bir mijoz, haydovchi va xodimni qadrlaydi.</p>
+      <p>TMT taxi haydovchilarni tanlashda professional va qat’iy yondashuvni kafolatlaydi, bu bizga yo‘lovchilarga tinch va qulay sayohatlarni taqdim etish imkonini beradi. Shu bilan birga, biz haydovchilar bilan insoniy munosabatlarni o‘rnatamiz va qulay mehnat va daromad sharoitlarini yaratamiz, bu bizning hamkorligimizni haqiqatan ham o‘zaro manfaatli qiladi. Kompaniyaning haydovchilari havas qilsa arziydigan izchillik bilan shahar tanlovlarida “Eng yaxshi taksi haydovchisi” unvonini sohibi bo‘lishadi va Moskva shahar ma’muriyatining faxriy yorliqlariga ega bo‘lishadi.</p>
+      <p>TMT taxi Moskvadagi eng yirik taksi kompaniyalaridan biri bo‘lib, har bir mijoz, haydovchi va xodimni qadrlaydi.</p>
 
       <div class="stats">
         <div class="stat-box">
