--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
 
     <!-- Kategoriyalar -->
     <div class="d-flex gap-5 mb-4">
-      <span class="fw-semibold text-secondary">Iqtisodiyot</span>
-      <span class="fw-semibold text-dark">Qulaylik</span>
-      <span class="fw-semibold text-dark">Konfor +</span>
+      <span class="fw-semibold text-dark">Kamkort</span>
+      <span class="fw-semibold text-dark">Kamkort +</span>
+      <span class="fw-semibold text-dark">Biznes</span>
     </div>
 
     <div class="row row-cols-1 row-cols-md-4 g-4">
@@ -228,7 +228,7 @@
             <h5 class="card-title fw-bold">Jac j7</h5>
             <p class="mb-2">Kuniga 485 000 so'm</p>
           </div>
-          <img src="./jac.jpg" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
+          <img src="./jacj7.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
         </div>
       </div>
 
