--- a/index2.html
+++ b/index2.html
@@ -217,7 +217,7 @@
         <span class="accordion-icon">+</span>
       </div>
       <div class="accordion-content">
-        Yoshi 23+, rus tilini bilish, 3 yillik tajriba, Rossiya yoki Belarus fuqaroligi.
+        Yoshi 23+, o'zbek tilini bilish, 3 yillik tajriba, O'zbekiston fuqaroligi.
       </div>
     </div>
   </div>
@@ -293,7 +293,7 @@
             <li class="mb-2 ">• Har 7-kun bepul ijarasi</li>
             <li class="mb-2 ">• Har olti oyda 6 kunlik bepul ijarasi</li>
             <li class="mb-2 ">• 2–4 haftalik ijaradan keyin sotib olish mumkin</li>
-            <li class="mb-2 ">• Yandex.Taxi, Taxi Rhythm va boshqalarni ulash</li>
+            <li class="mb-2 ">• Yandex.Taxi, TMT TAXI va boshqalarni ulash</li>
             <li class="mb-2 ">• Buyurtmalar uchun rejalar yo‘q</li>
             <li class="mb-2 ">• Haydovchi bilan insoniy munosabatlar</li>
             <li class="mb-2 ">• Komissiyasiz kunlik to‘lovlar</li>
