--- a/index4.html
+++ b/index4.html
@@ -160,7 +160,7 @@
     <h1 class="display-4 fw-bold mb-4">Bizning muvaffaqiyatimiz siri</h1>
 
     <p class="lead">
-      Dastlabki 2 yillik ish natijalariga ko'ra, biz Moskvadagi eng yirik taksi parklari qatoridamiz. Va agar siz Moskvaning barcha avtoparklarini yoshi va ishonchliligi bo'yicha baholasangiz, Taxi Ritm kompaniyasi reytingda birinchi o'rinda turadi, chunki biz 2023 yildan beri "omon qolishga" va munosib ishonchni saqlab qolishga muvaffaq bo'lgan yagonamiz. 2025 yil boshiga kelib, bizning taksi parkimiz tejamkorlik, Comfort va Comfort+ segmentlarida 1800 dan ortiq avtomobillarga ega. Bizda 8 ta motor kolonnasi va Moskvada o'z haydovchilar tayyorlash markazimiz ochilgan.
+      Dastlabki 2 yillik ish natijalariga ko'ra, biz Moskvadagi eng yirik taksi parklari qatoridamiz. Va agar siz Moskvaning barcha avtoparklarini yoshi va ishonchliligi bo'yicha baholasangiz, TMT taxida kompaniyasi reytingda birinchi o'rinda turadi, chunki biz 2023 yildan beri "omon qolishga" va munosib ishonchni saqlab qolishga muvaffaq bo'lgan yagonamiz. 2025 yil boshiga kelib, bizning taksi parkimiz tejamkorlik, Comfort va Comfort+ segmentlarida 1800 dan ortiq avtomobillarga ega. Bizda 8 ta motor kolonnasi va Moskvada o'z haydovchilar tayyorlash markazimiz ochilgan.
     </p>
 
     <p class="mt-4">
